more pr comments